Added a photo in vertical blinds and Added a Submenu in Main Site

--- a/index.html
+++ b/index.html
@@ -200,6 +200,15 @@
 												<li><a href="#">Backlit Flex Board</a></li>
 											</ul>
 										</li>
+										<li>
+											<span class="opener">Curtain Rods</span>
+											<ul>
+												<li><a href="#">Drapery Rods</a></li>
+												<li><a href="#">Wood-Finish Rods</a></li>
+												<li><a href="#">S.S. Rods</a></li>
+												<li><a href="#">PVC Coated Rods</a></li>
+											</ul>
+										</li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li>
 										<li><a href="#">Etiam Dolore</a></li>
