Sidebar entries added

--- a/index.html
+++ b/index.html
@@ -165,17 +165,43 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Glass Film</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">Sun Control Film</a></li>
+												<li><a href="#">Decorative Film</a></li>
+												<li><a href="#">Privacy Film</a></li>
+												<li><a href="#">Safety Film</a></li>
 											</ul>
 										</li>
+										<li>
+											<span class="opener">Blinds</span>
+											<ul>
+												<li><a href="#">Vertical Blinds</a></li>
+												<li><a href="#">Roller Blinds</a></li>
+												<li><a href="#">Zebra Blinds</a></li>
+												<li><a href="#">Venetian Blinds</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Flooring</span>
+											<ul>
+												<li><a href="#">Wooden Flooring</a></li>
+												<li><a href="#">PVC Flooring</a></li>
+												<li><a href="#">Non-Woven Carpet</a></li>
+											</ul>
+										</li>
+										<li>
+											<span class="opener">Signage</span>
+											<ul>
+												<li><a href="#">S.S. Plates</a></li>
+												<li><a href="#">Acrylic Plates</a></li>
+												<li><a href="#">Flex Boards</a></li>
+												<li><a href="#">Backlit Flex Boards</a></li>
+											</ul>
+										</li>
+										<li><a href="generic.html">Generic</a></li>
+										<li><a href="elements.html">Elements</a></li>
 										<li><a href="#">Etiam Dolore</a></li>
 										<li><a href="#">Adipiscing</a></li>
 										<li>
